--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,39 +1,29 @@
-:9090 {
-    basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / prometheus:9090 {
-            transparent
-        }
+(basic-auth) {
+       basicauth /* {
+           {$ADMIN_USER} {$ADMIN_PASSWORD}
+       }
+}
 
-    errors stderr
-    tls off
+iptc:9090 {
+    import basic-auth
+    reverse_proxy prometheus:9090
+    tls internal
 }
 
 :9093 {
-    basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / alertmanager:9093 {
-            transparent
-        }
-
-    errors stderr
-    tls off
+    import basic-auth
+    reverse_proxy alertmanager:9093
+    tls internal
 }
 
 :9091 {
-    basicauth / {$ADMIN_USER} {$ADMIN_PASSWORD}
-    proxy / pushgateway:9091 {
-            transparent
-        }
-
-    errors stderr
-    tls off
+    import basic-auth
+    reverse_proxy pushgateway:9091
+    tls internal
 }
 
-:3000 {
-    proxy / grafana:3000 {
-            transparent
-            websocket
-        }
-
-    errors stderr
-    tls off
+itpc:3000 {
+    import basic-auth
+    reverse_proxy grafana:3000
+    tls internal
 }
