--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '2.1'
 networks:
   monitor-net:
     driver: bridge
+    external: true
 
 volumes:
     prometheus_data: {}
@@ -11,7 +12,7 @@ volumes:
 services:
 
   prometheus:
-    image: prom/prometheus:v2.17.1
+    image: prom/prometheus:v2.37.0
     container_name: prometheus
     volumes:
       - ./prometheus:/etc/prometheus
@@ -32,7 +33,7 @@ services:
       org.label-schema.group: "monitoring"
 
   alertmanager:
-    image: prom/alertmanager:v0.20.0
+    image: prom/alertmanager:v0.24.0
     container_name: alertmanager
     volumes:
       - ./alertmanager:/etc/alertmanager
@@ -48,7 +49,7 @@ services:
       org.label-schema.group: "monitoring"
 
   nodeexporter:
-    image: prom/node-exporter:v0.18.1
+    image: prom/node-exporter:v1.3.1
     container_name: nodeexporter
     volumes:
       - /proc:/host/proc:ro
@@ -68,7 +69,7 @@ services:
       org.label-schema.group: "monitoring"
 
   cadvisor:
-    image: gcr.io/google-containers/cadvisor:v0.34.0
+    image: gcr.io/cadvisor/cadvisor:v0.45.0
     container_name: cadvisor
     volumes:
       - /:/rootfs:ro
@@ -85,7 +86,7 @@ services:
       org.label-schema.group: "monitoring"
 
   grafana:
-    image: grafana/grafana:6.7.2
+    image: grafana/grafana:9.1.2
     container_name: grafana
     volumes:
       - grafana_data:/var/lib/grafana
@@ -103,18 +104,18 @@ services:
       org.label-schema.group: "monitoring"
 
   pushgateway:
-    image: prom/pushgateway:v1.2.0
+    image: prom/pushgateway:v1.4.3
     container_name: pushgateway
     restart: unless-stopped
     expose:
-      - 9091
+      - 9091    
     networks:
       - monitor-net
     labels:
       org.label-schema.group: "monitoring"
 
   caddy:
-    image: stefanprodan/caddy
+    image: caddy:2.5.2-alpine
     container_name: caddy
     ports:
       - "3000:3000"
